function to unify peaksets of two input peak matrices

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,3 +8,4 @@ export(get_signature_pvalue)
 export(granges_overlap)
 export(plot_granges_overlap)
 export(random_granges)
+export(unify_peak_matrices)
